<resources>
    <string name="app_name">Laboratorio7</string>
    <string name="title">Almuerzos Tuti</string>
    <string name="ck1">Sancocho B/. 3.00</string>
    <string name="ck2">Arroz con Pollo y ensalada B/. 4.00</string>
    <string name="ck3">Chuleta, arroz y poroto B/. 3.50</string>
    <string name="ck4">Bebida B/. 1.50</string>
    <string name="btn">Calcular Pago</string>
</resources>
