<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="50dp"
            android:textSize="30dp"
            android:text="@string/title"
            android:textColor="#5d54bb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox android:id="@+id/ck1"
                    android:text="@string/ck1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <CheckBox android:id="@+id/ck2"
                    android:layout_marginTop="20dp"
                    android:text="@string/ck2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <CheckBox android:id="@+id/ck3"
                    android:layout_marginTop="20dp"
                    android:text="@string/ck3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <CheckBox android:id="@+id/ck4"
                    android:layout_marginTop="20dp"
                    android:text="@string/ck4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button android:id="@+id/btn"
            android:layout_marginTop="50dp"
            android:text="@string/btn"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView android:id="@+id/tv3"
            android:layout_marginTop="80dp"
            android:textSize="24dp"
            android:text="Total: B/. 0.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>